--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -1,5 +1,5 @@
 <nav id="navbar">
-    <a href="https://github.com/Didixe" target="_blank"><img class="avatar" src="{{ asset('images/avatar.jpeg') }}" alt="Picture HandPan"><i class="fa-brands fa-github"></i></a>
+    <a id="avatarLink" href="https://github.com/Didixe" target="_blank"><img class="avatar" src="{{ asset('images/avatar.jpeg') }}" alt="Picture HandPan"><i class="fa-brands fa-github"></i></a>
     <ul id="nav-ul">
         <a href="#" class="nav-point"><li id="nav-li">Home</li></a>
         <a href="#"><li id="nav-li">About Me</li></a>
