--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,8 +11,8 @@
             <h2 id="typewriter-delayed">Développeuse web</h2>
         </div>
 {#        <a class="btn btn-profil">Plus d'info</a>#}
-                <button class="btn btn-profil">Plus d'info</button>
+                <button class="btn btn-outline-primary btn-lg">Plus d'info</button>
     </div>
-
+{#TODO btn gris quand hover#}
 
 {% endblock %}
