--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -10,9 +10,32 @@
             <h1 id="typewriter">Adeline GILET</h1>
             <h2 id="typewriter-delayed">Développeuse web</h2>
         </div>
-{#        <a class="btn btn-profil">Plus d'info</a>#}
                 <button class="btn btn-outline-primary btn-lg">Plus d'info</button>
     </div>
-{#TODO btn gris quand hover#}
+
+    <div id="secondPart">
+        <h1>Présentation</h1>
+        <span class="qui-suis-je">Qui suis-je ?</span>
+        <div class="aboutMe">
+            <img src="{{ asset('images/photoPortfolio.jpg') }}" alt="ma Photo">
+            <p>Bonjour,</p>
+            <p>Je suis une <span class="dev-web">développeuse Web</span> junior formée à La <span class="dev-web">Wild Code School</span>,
+                spécialisée dans le cursus <span class="dev-web">PHP, Symfony</span>,
+                et réside actuellement à <span class="dev-web">Pessac</span>. Après huit ans dans le domaine du commerce, j'ai décidé de me
+                reconvertir afin de travailler dans un domaine qui correspond davantage à mes aspirations.
+            </p>
+            <p>
+                <span class="dev-web">Diplômée du TP de développeur Web</span>, je suis désireuse de renforcer mes nouvelles compétences. Dotée
+                d'une curiosité naturelle et d'une grande autonomie, j'ambitionne d'intégrer un poste de développeuse
+                Web afin de continuer à progresser sur le plan technique.
+            </p>
+            <p>
+                Fascinée par les évolutions constantes du monde qui nous entoure, je suis ouverte à divers
+                secteurs d'activité. Je suis convaincue que mon <span class="dev-web">parcours dans le domaine commercial</span> apporte
+                une perspective unique à mon travail de développeuse Web, enrichissant ainsi ma capacité à <span class="dev-web">comprendre
+                et répondre aux besoins des clients</span>.
+            </p>
+        </div>
+    </div>
 
 {% endblock %}
