--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -5,7 +5,9 @@ $text: "Montserrat";
 $navbar: rgba(36, 45, 57, 0.5);
 $dark-gray: rgb(36, 45, 57);
 $primary: lightpink;
+$secondary: #ADD8E6;
 
 @import "navbar";
 @import "firstPart";
 @import "body";
+@import "secondPart";
