--- a/assets/styles/firstPart.scss
+++ b/assets/styles/firstPart.scss
@@ -1,14 +1,13 @@
 #firstPart {
   align-items: center;
   background-blend-mode: darken;
-  background: rgba(0, 0, 0, .8) url('../images/homePage.jpg') no-repeat 50% ;
-  background-size: cover;
+  background: rgba(0, 0, 0, .8) url('../images/homePage.jpg') no-repeat center;
+  background-size: 100vw;
   display: flex;
   height: calc(90vh + 80px);
   justify-content: center;
   flex-direction: column;
   margin: 0 auto;
-  z-index: 1;
 }
 
 #firstPart .principalTitle{
