--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -48,6 +48,18 @@
         </div>
     </div>
 
+    <div id="thirdPart">
+        <h1>Portfolio</h1>
+
+        <div class="project">
+            <div class="div1"> <img src="{{ asset('images/Site_Vitrine_Baratie.png') }}" alt="Photo et lien du site vitrine du restaurant le Baratie"> </div>
+            <div class="div2"> <img src="{{ asset('images/photoPortfolio.jpg') }}" alt="ma Photo"> d2 géocode </div>
+            <div class="div3"> <img src="{{ asset('images/photoPortfolio.jpg') }}" alt="ma Photo"> d3 escape game</div>
+            <div class="div4"> <img src="{{ asset('images/photoPortfolio.jpg') }}" alt="ma Photo"> d4 projet choko </div>
+            <div class="div5"> <img src="{{ asset('images/photoPortfolio.jpg') }}" alt="ma Photo"> d5 bientot </div>
+        </div>
+    </div>
+
 
 
 {% endblock %}
