--- a/assets/styles/fourthPart.scss
+++ b/assets/styles/fourthPart.scss
@@ -3,6 +3,113 @@
   display: flex;
   justify-content: center;
   height: 100vh;
+  position: relative;
+  flex-direction: column;
+  @media screen and (max-width: 780px) {
+    height: auto;
+    margin: 5px;
+  }
 }
 
+#fourthPart button,input,optgroup,select,textarea{
+  width: 95%;
+}
 
+.input{
+  display: block;
+  margin-left: 10px;
+  margin-bottom: -5px;
+  z-index: 1;
+  position: relative;
+}
+
+input{
+  padding: 5px;
+}
+
+.champ{
+  margin-bottom: 1rem;
+}
+
+textarea {
+  padding: 5px;
+}
+
+.btn-contact{
+  margin-left: 10px;
+}
+
+#fourthPart h4 {
+  font-size: 3.5rem;
+  margin: 55px auto;
+  text-transform: capitalize;
+  @media screen and (max-width: 780px) {
+    font-size: 2.5rem;
+    margin: 55px auto 30px;
+  }
+}
+
+.contact{
+  position: relative;
+  max-width: 800px;
+  margin: 55px auto;
+  padding: 50px 50px;
+  border: 2px solid #FFB6C1;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(255, 182, 193, 0.5);
+  width: 100%;
+}
+
+.contact a{
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+}
+
+.contact .side-by-side{
+  @media screen and (max-width: 780px){
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.side-by-side, .info .side-by-side{
+  display: flex;
+  flex-direction: row;
+}
+
+.form{
+  width: 49%;
+  @media screen and (max-width: 780px){
+    width: auto;
+  }
+}
+cd p
+.info img{
+  width: 100%;
+  height: 20vh;
+  margin-bottom: 0.5rem;
+}
+
+.info{
+  padding: 2rem 1rem 0 2rem;
+  width: 49%;
+  display: flex;
+  flex-direction: column;
+  @media screen and (max-width: 780px){
+    width: auto;
+  }
+}
+
+.info p{
+  display: flex;
+  align-items: center;
+}
+
+p svg{
+  margin-right: 5px;
+}
+
+.side-by-side a svg{
+  margin: 1rem 2rem 0 0;
+}
