--- a/assets/styles/navbar.scss
+++ b/assets/styles/navbar.scss
@@ -29,11 +29,24 @@
 
 #avatarLink {
     display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: 2px;
 }
 
 a .avatar{
     width: 3rem;
     border-radius: 50%;
+    @media screen and (max-width: 560px) {
+        width: 2rem;
+    }
+    @media screen and (max-width: 780px) {
+        width: 1.5rem;
+    }
+}
+
+ul#nav-ul {
+    padding: 2px;
 }
 
 ul a {
@@ -43,15 +56,12 @@ ul a {
     display: inline-block;
 }
 
+
 .fa-github {
     font-size: 52px;
     margin-left: 15px;
 }
 #nav-ul {
-    //margin-left: 62px;
-    //@media screen and (max-width: 560px) {
-    //    margin-left: 54px;
-    //}
     margin-bottom: 0;
     li {
         list-style-type: none;
@@ -60,15 +70,18 @@ ul a {
         display: inline;
         margin: 16px;
         @media screen and (max-width: 780px) {
-            font-size: 1.05rem;
+            font-size: 1.00rem;
             margin: 12px;
         }
         @media screen and (max-width: 560px) {
-            font-size: 0.9rem;
-            margin: 8px;
+            font-size: 0.8rem;
+            margin: 5px;
         }
     }
     a {
+        @media screen and (max-width: 560px) {
+            line-height: 26px;
+        }
         line-height: 52px;
         border-radius: 10px;
         transition: background-color 0.3s, color 0.3s;
@@ -80,5 +93,11 @@ ul a {
     a:onclick {
         background: black;
         color: white;
+    }
+}
+
+@media screen and (max-width: 470px) {
+    #cv-link {
+        display: none;
     }
 }
