--- a/assets/styles/secondPart.scss
+++ b/assets/styles/secondPart.scss
@@ -2,6 +2,11 @@
   color: $primary;
   display: flex;
   justify-content: center;
+  height: 100vh;
+  @media screen and (max-width: 560px) {
+    height: auto;
+    margin: 5px;
+  }
 }
 
 .aboutMe{
@@ -25,6 +30,9 @@
   left: 0;
   z-index: 1;
   padding: 0;
+  @media screen and (max-width: 560px) {
+    margin-top: 84px;
+  }
 }
 
 #secondPart .qui-suis-je {
@@ -32,6 +40,9 @@
   right: 0;
   opacity: 0.2;
   font-size: 72px;
+  @media screen and (max-width: 560px) {
+    font-size: 54px;
+  }
 }
 
 #secondPart img{
@@ -41,6 +52,9 @@
   margin-right: auto;
   margin-bottom: 1.5rem;
   border-radius: 10px;
+  @media screen and (max-width: 780px) {
+    width: 50%;
+  }
 }
 
 .dev-web {
@@ -53,3 +67,4 @@
   justify-content: center;
   text-decoration: none;
 }
+
