--- a/assets/styles/thirdPart.scss
+++ b/assets/styles/thirdPart.scss
@@ -6,6 +6,9 @@
   flex-direction: column;
   align-items: center;
   height: 100vh;
+  @media screen and (max-width: 780px) {
+    height: auto;
+  }
 }
 
 #thirdPart h3{
@@ -25,11 +28,23 @@
   padding: 1rem;
   background-color: white;
   border-radius: 10px;
+  @media screen and (max-width: 780px) {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    height: auto;
+  }
 }
 
 .project img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
+  @media screen and (max-width: 780px) {
+    width: 100%;
+    height: 150px;
+
+  }
 }
 
 .div1 { grid-area: 1 / 1 / 3 / 2; }
@@ -46,6 +61,10 @@
   justify-content: center;
   font-size: 3rem;
   text-transform: capitalize;
+  @media screen and (max-width: 780px) {
+    width: 100%;
+    height: 150px;
+  }
 }
 
 .picturesHover {
@@ -67,6 +86,9 @@
   transition: background-color 0.8s, color 0.8s;
   z-index: 1;
   font-size: 2rem;
+  @media screen and (max-width: 780px) {
+    font-size: 1rem;
+  }
 }
 
 .picturesHover:hover::after {
