--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,5 +20,6 @@
     <body>
         {% include 'components/_navbar.html.twig' %}
         {% block body %}{% endblock %}
+        {% include 'components/_footer.html.twig' %}
     </body>
 </html>
