--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -52,10 +52,10 @@
         <h3>Portfolio</h3>
 
         <div class="project">
-            <a href="#" class="picturesHover div1" title="site vitrine" data-content="Restaurant Baratie"><img src="{{ asset('images/Site_Vitrine_Baratie.png') }}" alt="Photo et lien du site vitrine du restaurant le Baratie"></a>
-            <a href="#" class="picturesHover div2" title="application" data-content="Géocode"><img src="{{ asset('images/geocode.png') }}" alt="Photo et lien du site Géocode"></a>
-            <a href="#" class="picturesHover div3" title="jeux" data-content="escape game"><img src="{{ asset('images/EscapeGameMini.png') }}" alt="Photo et lien du jeux EscapeGame"></a>
-            <a href="#" class="picturesHover div4" title="site vitrine" data-content="MistralPan"><img src="{{ asset('images/MistralPan.png') }}" alt="Photo et lien du site vitrine de MistralPan"></a>
+            <a href="/baratie" class="picturesHover div1" title="site vitrine" data-content="Restaurant Baratie"><img src="{{ asset('images/Site_Vitrine_Baratie.png') }}" alt="Photo et lien du site vitrine du restaurant le Baratie"></a>
+            <a href="/geocode" class="picturesHover div2" title="application" data-content="Géocode"><img src="{{ asset('images/geocode.png') }}" alt="Photo et lien du site Géocode"></a>
+            <a href="/escape" class="picturesHover div3" title="jeux" data-content="escape game"><img src="{{ asset('images/EscapeGameMini.png') }}" alt="Photo et lien du jeux EscapeGame"></a>
+            <a href="/mistral/pan" class="picturesHover div4" title="site vitrine" data-content="MistralPan"><img src="{{ asset('images/MistralPan.png') }}" alt="Photo et lien du site vitrine de MistralPan"></a>
             <div class="div5">bientot ...</div>
         </div>
     </div>
