--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -19,7 +19,7 @@
         <div class="aboutMe">
             <img src="{{ asset('images/photoPortfolio.jpg') }}" alt="ma Photo">
             <p>Bonjour,</p>
-            <p>Je suis une <span class="dev-web">développeuse Web</span> junior formée à La <span class="dev-web">Wild Code School</span>,
+            <p>Je suis une <span class="dev-web">développeuse Web</span> formée à La <span class="dev-web">Wild Code School</span>,
                 spécialisée dans le cursus <span class="dev-web">PHP, Symfony</span>,
                 et réside actuellement à <span class="dev-web">Pessac</span>. Après huit ans dans le domaine du commerce, j'ai décidé de me
                 reconvertir afin de travailler dans un domaine qui correspond davantage à mes aspirations.
